fdo#77990: Intern strings for hybrid strings during import.

Change-Id: I269497cac645e486ac08bb2b011df1b5b23dc021